Fixing buttons possiotioning on mobile devices

--- a/assets/css/home.scss
+++ b/assets/css/home.scss
@@ -297,7 +297,7 @@ footer {
 @media (min-width: 320px){
 
     .header-box h1 {
-        top: 20%;
+        top: 18%;
     }
 
     .rules-btn, .play-btn {
@@ -306,12 +306,12 @@ footer {
     }
 
     .rules-btn {   
-        top: 48%;    
+        top: 50%;    
         left: 35%;
     }
     
     .play-btn {
-        top: 58%;
+        top: 60%;
         left: 35%;
     }
 
@@ -387,12 +387,12 @@ footer {
     }
 
     .rules-btn{   
-        top: 38%;    
+        top: 45%;    
         left: 41%;
     }
     
     .play-btn {
-        top: 38%;
+        top: 45%;
         left: 51%;
     }
 
